--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -2,7 +2,7 @@
 
 
 <ul class="todo_items">
- <%= @todo_list.todo_items.each do |todo_item| %>
+ <% @todo_list.todo_items.each do |todo_item| %>
  <li><%= todo_item.content %></li>
  <% end %>
 </ul>
